--- a/olay.html
+++ b/olay.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olay India Official Website</title>
+    <title>olay India Official Website</title>
     <link rel="stylesheet" href="olay.css">
     <script src="olay.js"></script>
     
